--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 	                    </div>
 	
 	                    <div class="card">
-	                        <img src="latex.svg"alt="">
-	                        <h2> LaTeX</h2>
+	                        <img src="ARDUINO.svg"alt="">
+	                        <h2> Arduino</h2>
 	                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, quisquam quod quasi minima eaque iusto dolorum.</p>
 	                    </div>
 	                </div>
