--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My portfolio</title>
-	<link rel="icon" type="image/x-icon" href"https://img.icons8.com/emoji/48/000000/p-button-emoji.png">
+	<link rel="icon" type="image/x-icon" href="https://img.icons8.com/cute-clipart/64/000000/p.png"/>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
