--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						   </p>
 		
 		                        <div> 
-		                            <!--<button class="btn btn-secondary">DOWNLOAD CV</button>--> <!--google drive link for download of CV-->
+		                            <!--button class="btn btn-secondary">DOWNLOAD CV</button--> 
 					    <a href="https://drive.google.com/file/d/1kfVuUO8tzeGhojyo5f6VjxLZTqqdhG_T/view?usp=sharing" download="File"<button class="btn btn-secondary">DOWNLOAD CV</button> </a>
 		                        </div>
 		
