--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		
 		                        <div> 
 		                            <!--button class="btn btn-secondary">DOWNLOAD CV</button--> 
-					    <a href="https://drive.google.com/file/d/1kfVuUO8tzeGhojyo5f6VjxLZTqqdhG_T/view?usp=sharing" download="File"<button class="btn btn-secondary">DOWNLOAD CV</button> </a>
+					    <a href="Soumyajit's Resume#.pdf" download="CV"<button class="btn btn-secondary">DOWNLOAD CV</button> </a>
 		                        </div>
 		
 		        </div>	
