--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		
 		                        <div> 
 		                            <!--button class="btn btn-secondary">DOWNLOAD CV</button--> 
-					    <a href="Soumyajit's Resume#.pdf" download="CV.pdf"<button class="btn btn-secondary">DOWNLOAD CV</button> </a>
+					    <a href="/Soumyajit's Resume#.pdf" download="CV.pdf"<button class="btn btn-secondary">DOWNLOAD CV</button> </a>
 		                        </div>
 		
 		        </div>	
