--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		
 		                        <div> 
 		                            <!--button class="btn btn-secondary">DOWNLOAD CV</button--> 
-					    <a href="/Soumyajit's Resume#.pdf" download="CV.pdf"<button class="btn btn-secondary">DOWNLOAD CV</button> </a>
+					    <a href="https://github.com/Soumyajit9696/portfolio/blob/0b9fac43f4f68e2d0c63cceaec716b366cc9b91c/Soumyajit's%20Resume%23.pdf" download="CV.pdf"<button class="btn btn-secondary">DOWNLOAD CV</button> </a>
 		                        </div>
 		
 		        </div>	
