--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 			    <div class="card">
 			        <div class="overlay"> 
 			            <span>Category</span>
-				        <a href="#">Web developement</a>
+				        <a href="https://soumyajit9696.github.io/To-Do_List/">Web developement</a>
 			        </div>
 			        <img src="ph-1.png" alt="">
 			    </div>
