--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 			            <span>Category</span>
 				        <a href="https://soumyajit9696.github.io/To-Do_List/">Web developement</a>
 			        </div>
-			        <img src="ph-1.png" alt="">
+			        <img src="todo.png" alt="">
 			    </div>
 		    
 			    <div class="card">
